syntax = "proto3";

option go_package = "conversation/";

package com.NimbusIM.proto.conversation;

import "common/common.proto";

service Conversation {
  rpc UpsetSingle (ConversationUpsetSingleRequest) returns (ConversationEntity) {
  }

  rpc UpsetGroup (ConversationUpsetGroupRequest) returns (ConversationEntity) {
  }

  rpc UpdateStatus (ConversationUpdateStatusRequest) returns (common.Empty) {
  }

  rpc Detail (ConversationDetailRequest) returns (ConversationEntity) {
  }

  rpc DetailGroup (common.DetailByIdRequest) returns (ConversationGroupEntity) {
  }

  rpc ListAllUserIdByConversationId (ConversationListAllUserIdByConversationIdRequest) returns (ConversationListUserIdResponse) {
  }

  rpc ListAllId (ConversationListAllRequest) returns (ConversationListIdResponse) {
  }
}

message ConversationUpsetSingleRequest {
  int64 send_id = 1;
  int64 receive_id = 2;
}

message ConversationUpsetGroupRequest {
  int64 user_id = 1;
  int64 conversation_id = 2;
}

message ConversationUpdateStatusRequest {
  int64 user_id = 1;
  int64 conversation_id = 2;
  int32 status = 3;
}

message ConversationDetailRequest {
  int64 user_id = 1;
  int64 conversation_id = 2;
}

message ConversationListAllUserIdByConversationIdRequest {
  int64 conversation_id = 1;
}

message ConversationListAllRequest {
  int64 user_id = 1;
}

message ConversationListIdResponse {
  int64 total = 1;
  int64 offset = 2;
  int64 limit = 3;
  repeated int64 items = 4;
}

message ConversationListUserIdResponse {
  int64 total = 1;
  int64 offset = 2;
  int64 limit = 3;
  repeated int64 items = 4;
}

message ConversationEntity {
  int64 id = 1;
  int64 owner = 2;
  int64 conversation_id = 3;
  int32 conversation_type = 4;
  int64 user_id_1 = 5;
  int64 user_id_2 = 6;
  int32 status = 7;
  int64 create_time = 8;
  int64 update_time = 9;
  int64 unread_count = 10;
  int64 unread_start = 11;
  int64 unread_count_at = 12;
  int64 unread_start_at = 13;
}

message ConversationGroupEntity {
  int64 id = 1;
  int64 user_id = 2;
  string group_name = 3;
  int32 status = 4;
  int64 create_time = 5;
  int64 update_time = 6;
}
